# clawops

./: .gitignore  Cargo.toml  README.md  clawops.example.toml
docs/: capacity-test.md  miniprogram-api.md
migrations/: 0001_init.sql  0002_sessions.sql  0003_chat_messages.sql
scripts/: install-binaries.sh  refresh_cost_config.sh  server-bootstrap.sh  stress_cleanup.sh  stress_concurrent.sh  stress_idle.sh  sweep_orphans.sh
src/: auth.rs  chat_history.rs  config.rs  db.rs  error.rs  http.rs  lib.rs  limits.rs  main.rs  ports.rs  provisioner.rs  reaper.rs  sessions.rs  users.rs
src/process/: mock.rs  mod.rs  systemd.rs
systemd/: zeroclaw@.service
templates/workspace/: IDENTITY.md.hbs  SOUL.md.hbs  USER.md.hbs  config.toml.hbs
templates/workspace/skills/commodity-recommend/: SKILL.md.hbs
templates/workspace/skills/longshrimp-cross-sell/: SKILL.md.hbs
