[package]
name = "clawops"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant ops gateway for ZeroClaw agents"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }

handlebars = "6"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
